--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "logseq-plugin-template-typescript",
-    "description": "A template for Logseq plugin written in TypeScript",
-    "repository": "https://github.com/YU000jp/logseq-plugin-template-typescript.git",
+    "name": "logseq-plugin-short-namespaces",
+    "description": "",
+    "repository": "https://github.com/YU000jp/logseq-plugin-short-namespaces.git",
     "author": "YU000jp",
     "license": "MIT",
     "logseq": {
-        "id": "template-typescript",
-        "title": "Template TypeScript",
+        "id": "short-namespaces",
+        "title": "Short Namespaces",
         "icon": "./icon.svg",
         "main": "./dist/index.html"
     },
