--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         "prod": "npm run clean && vite build"
     },
     "dependencies": {
-        "@logseq/libs": "^0.0.15",
-        "logseq-l10n": "^0.2.0"
+        "@logseq/libs": "^0.0.15"
     },
     "devDependencies": {
         "@semantic-release/changelog": "^6.0.3",
