--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "logseq-plugin-short-namespaces",
-    "description": "Provides abbreviated representation for namespaces (hierarchy).",
+    "description": "Displays hierarchical links, which tend to be long, by omitting them.",
     "repository": "https://github.com/YU000jp/logseq-plugin-short-namespaces.git",
     "author": "YU000jp",
     "license": "MIT",
